--- a/package.json
+++ b/package.json
@@ -3,9 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "axios": "^0.18.1",
+    "bootstrap": "^4.3.1",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-dropdown": "^1.6.4",
+    "react-dropdown-select": "^2.2.3",
+    "react-html-parser": "^2.0.2",
+    "react-moment": "^0.9.2",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.0",
+    "react-select": "^2.4.3",
+    "react-styled-select": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
